# ghost

./: ARCHITECTURE.md  README.md  SECURITY.md
app/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/electron/: main.ts
app/src/: App.tsx  index.css
app/src/components/: ClearSignModal.tsx  Dashboard.tsx  Onboarding.tsx  Receive.tsx  Send.tsx
app/src/crypto/: scanner.ts  srpa.ts
app/src/store/: db.ts  pool.ts
app/src/walletconnect/: wc2.ts
contracts/: srpa_pool.cash
core/: Cargo.toml
core/src/: covenant.rs  ecdh.rs  hd_wallet.rs  lib.rs  signer.rs  srpa.rs
